# AsioServer

./: .gitignore  CMakeLists.txt
app/server_coroutine/: main.cpp
config/: ConfigManager.cpp  ConfigManager.h  ConfigReader.cpp  ConfigReader.h  database.json  server.json
core/common/: Const.h
core/logic/: LogicNode.h  LogicSystem.cpp  LogicSystem.h
core/message/: MsgNode.cpp  MsgNode.h
core/protocol/: JsonResponse.h  MessageHeader.h
core/server/: CServer.cpp  CServer.h
core/session/: AsioIOServicePool.cpp  AsioIOServicePool.h  CSession.cpp  CSession.h
infra/log/: Logger.cpp  Logger.h  SafeQueue.h
infra/util/: PathUtils.cpp  PathUtils.h  StringFormat.h
net/coroutine/: CoroutineSession.cpp  CoroutineSession.h
net/threaded/: AsyncSession.cpp  AsyncSession.h
services/: IService.cpp  IService.h  ServiceManager.cpp  ServiceManager.h
services/CommunicationService/: ClientInfo.h  ClientManager.cpp  ClientManager.h  CommunicationService.cpp  CommunicationService.h  CommunicationServiceRegister.cpp
services/DBService/: DBConnection.h  DBConnectionPool.cpp  DBConnectionPool.h  DBExecutor.cpp  DBExecutor.h  DBService.cpp  DBService.h  DBServiceRegister.cpp  DBStruct.h  MySQLConnection.cpp  MySQLConnection.h  MySQLConnectionPool.cpp  MySQLConnectionPool.h  SqliteConnection.cpp  SqliteConnection.h  SqliteConnectionPool.cpp  SqliteConnectionPool.h
services/HeartService/: HeartService.cpp  HeartService.h  HeartServiceRegister.cpp
services/HelloService/: HelloService.cpp  HelloService.h
